--- a/src/app/Components/user/user.component.html
+++ b/src/app/Components/user/user.component.html
@@ -9,41 +9,42 @@
               <h6 class="p-2">User List</h6>
             </div>
             <div class="col-6 text-end">
-
-              <button class="btn btn-info" (click)=onResetForm(userForm) >Add User</button>
+              <button class="btn btn-info" (click)="onResetForm(userForm)">Add User</button>
             </div>
           </div>
         </div>
         <div class="card-body">
-          <table class="table table-bordered table-striped">
-            <thead>
-              <tr>
-                <th>Department</th>
-                <th>Name</th>
-                <th>Gender</th>
-                <th>Mobile</th>
-                <th>Email</th>
-                <th>DOJ</th>
-                <th>Status</th>
-                <th>Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of userList; let i = index">
-                <td> {{ item.department }} </td>
-                <td> {{ item.name }} </td>
-                <td>{{ item.gender }}</td>
-                <td>{{ item.mobile }}</td>
-                <td>{{ item.email }}</td>
-                <td>{{ item.doj }}</td>
-                <td>{{ item.status ? 'Active' : 'Inactive' }}</td>
-                <td class="text-center">
-                  <i class="fa fa-edit text-primary" (click)="onEdit(item)"></i> |
-                  <i class="fa fa-trash text-danger" (click)="onDelete(item.id)"></i>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="table-responsive">
+            <table class="table table-bordered table-striped">
+              <thead>
+                <tr>
+                  <th>Department</th>
+                  <th>Name</th>
+                  <th>Gender</th>
+                  <th>Mobile</th>
+                  <th>Email</th>
+                  <th>DOJ</th>
+                  <th>Status</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of userList; let i = index">
+                  <td>{{ item.department }}</td>
+                  <td>{{ item.name }}</td>
+                  <td>{{ item.gender }}</td>
+                  <td>{{ item.mobile }}</td>
+                  <td>{{ item.email }}</td>
+                  <td>{{ item.doj }}</td>
+                  <td>{{ item.status ? 'Active' : 'Inactive' }}</td>
+                  <td class="text-center">
+                    <i class="fa fa-edit text-primary" (click)="onEdit(item)"></i> |
+                    <i class="fa fa-trash text-danger" (click)="onDelete(item.id)"></i>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
@@ -66,67 +67,55 @@
             <div class="col-6">
               <select class="form-select" name="department" required [(ngModel)]="user.department">
                 <option value="">Select Department</option>
-                <option *ngFor="let item of departmentList; let i = index"> {{ item }} </option>
+                <option *ngFor="let item of departmentList; let i = index">{{ item }}</option>
               </select>
             </div>
             <div class="col-6">
-              <input type="text" class="form-control" [(ngModel)]="user.name" name="name" required
-                placeholder="Name" id="">
+              <input type="text" class="form-control" [(ngModel)]="user.name" name="name" required placeholder="Name">
             </div>
             <div class="col-6">
-              <input type="text" class="form-control" [(ngModel)]="user.mobile" name="mobile" required
-                placeholder="Mobile" id="">
+              <input type="text" class="form-control" [(ngModel)]="user.mobile" name="mobile" required placeholder="Mobile">
             </div>
             <div class="col-6">
-              <input type="text" class="form-control" [(ngModel)]="user.email" name="email" required
-                placeholder="Email" id="">
+              <input type="text" class="form-control" [(ngModel)]="user.email" name="email" required placeholder="Email">
             </div>
             <div class="col-6">
-              <input type="date" class="form-control" [(ngModel)]="user.doj" name="doj" required
-                placeholder="DOJ" id="">
+              <input type="date" class="form-control" [(ngModel)]="user.doj" name="doj" required placeholder="DOJ">
             </div>
             <div class="col-6">
               <div class="form-check form-check-inline">
-                <input type="radio" class="form-check-input" [(ngModel)]="user.gender" value="male"
-                  name="gender" required id="">
+                <input type="radio" class="form-check-input" [(ngModel)]="user.gender" value="male" name="gender" required>
                 <label class="form-check-label">Male</label>
               </div>
               <div class="form-check form-check-inline">
-                <input type="radio" class="form-check-input" [(ngModel)]="user.gender" value="female"
-                  name="gender" required id="">
+                <input type="radio" class="form-check-input" [(ngModel)]="user.gender" value="female" name="gender" required>
                 <label class="form-check-label">Female</label>
               </div>
             </div>
             <div class="col-6">
               <select class="form-select" name="city" required [(ngModel)]="user.city">
                 <option value="">Select City</option>
-                <option *ngFor="let item of cityList; let i = index"> {{ item }} </option>
+                <option *ngFor="let item of cityList; let i = index">{{ item }}</option>
               </select>
             </div>
             <div class="col-6">
-              <input type="text" class="form-control" [(ngModel)]="user.salary" name="salary" required
-                placeholder="Salary" id="">
+              <input type="text" class="form-control" [(ngModel)]="user.salary" name="salary" required placeholder="Salary">
             </div>
             <div class="col-12">
-              <textarea cols="5" class="form-control" rows="3" [(ngModel)]="user.address" name="address"
-                required placeholder="Address"></textarea>
+              <textarea cols="5" class="form-control" rows="3" [(ngModel)]="user.address" name="address" required placeholder="Address"></textarea>
             </div>
             <div class="col-12">
               <div class="form-check">
-                <input type="checkbox" class="form-check-input" [(ngModel)]="user.status" name="status"
-                  required id="">
+                <input type="checkbox" class="form-check-input" [(ngModel)]="user.status" name="status" required>
                 <label class="form-check-label"> Active?</label>
               </div>
             </div>
             <div class="col-12">
-              <button class="btn btn-primary w-100" type="submit">SAVE
-              </button>
-          </div>
-      </form>
-
+              <button class="btn btn-primary w-100" type="submit">SAVE</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-</div>
-</div>
-</div>
-           
