--- a/src/app/Components/user/user.component.html
+++ b/src/app/Components/user/user.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-8">
+    <div class="col-8"><br>
       <!-- USER LIST -->
       <div class="card">
         <div class="card-header bg-primary">
@@ -50,7 +50,7 @@
     </div>
 
     <div class="col-4">
-      <!-- USER FORM -->
+      <!-- USER FORM --><br>
       <div class="card">
         <div class="card-header bg-primary">
           <div class="row">
